@@ -25,6 +25,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -39,6 +40,35 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.47.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-jetty -->
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-jetty</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-drive -->
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-drive</artifactId>
+            <version>v3-rev20240722-2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -98,8 +128,13 @@
 <!--            <version>${junit.version}</version>-->
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
-
         <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-apache-v2</artifactId>
+            <version>1.47.0</version> <!-- Match your google-http-client-jackson2 version -->
+        </dependency>
+        <dependency>
+
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
             <version>${javafx.version}</version>
@@ -118,6 +153,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <release>17</release>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.httpserver</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -139,6 +181,7 @@
                     <mainClass>${main.class}</mainClass>
                     <verbose>true</verbose>
                     <enableSWRendering>false</enableSWRendering>
+
                     <graalvmHome></graalvmHome>
                     <bundlesList></bundlesList>
                     <resourcesList></resourcesList>
@@ -155,6 +198,7 @@
 
                     <nativeImageArgs>
                         <arg>--report-unsupported-elements-at-runtime</arg>
+                        <arg>--add-modules=jdk.httpserver</arg>
                     </nativeImageArgs>
                     <linkerArgs></linkerArgs>
                     <runtimeArgs></runtimeArgs>
